<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">3TacToe</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">3TacToe</string>
    <string name="vacio"></string>
    <string name="turno">Turn </string>
    <string name="again">Play again </string>
    <string name="turno_def">X</string>
    <string name="X">X:</string>
    <string name="O">O:</string>
    <string name="contador_def">0</string>
    <string name="titulo">3TacToe</string>
    <string name="Nueva_Partida">New Game</string>
    <string name="Multijugador">Multiplayer</string>
    <string name="Online">Online</string>
    <string name="Salir">Exit</string>
    <string name="Buscar">Buscar partidas</string>
    <string name="Crear">Crear partida</string>
    <string name="Atras">Main Menu</string>
    <string name="Nombre">Name</string>
    <string name="NombrePartida">Partida</string>
    <string name="BotonCrear">Crear</string>
    <string name="Jugador1">Jugador1</string>
    <string name="Jugador2">Jugador2</string>
    <string name="Esperando">Esperando..</string>
    <string name="Empezar">Comenzar partida</string>
    <string name="Servidor">Servidor</string>
    <string name="ip">Ip del servidor</string>
    <string name="Verip">Ver ip</string>
    <string name="TuIp">Tu ip es:</string>
    <string name="title_activity_acerca">About</string>
    <string name="Acerca">About</string>
    <string name="Gana">Wins!</string>
    <string name="NoRepite">You can not repite</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="level">Level</string>
    <string name="score">Score</string>
    <string name="instrucciones">To pass through levels you have to win 3 matches of every level
 								 you will score according to the times you loose or win before you
 								 pass a level.
 								 At the start of each level you will get a message like that, with
 								 the number of lifes you have for that level. If you lose all your 
 								 lifes the game will be over.
 								 This is the first level and you have 3 lifes.</string>
    <string name="vidas">Lifes</string>
    <string name="title_activity_completado">Completado</string>
    <string name="guardar">Share this!</string>
    <string name="complet">GREETZ</string>
    <string name="complet2">YOU\'VE</string>
    <string name="complet3">BEATED</string>
    <string name="complet4">THE</string>
    <string name="complet5">GAME</string>
    <string name="title_activity_instrucciones">Instructions</string>
    <string name="twit">Ive just made</string>
    <string name="twit2">points playing 3TacToe for android, try to beat my score!</string>
    <string name="twit3">download: https://play.google.com/store/apps/developer?id=BBX+Enterprise.</string>
    <string name="twitc">points playing 3TacToe for android android ¡and I beated the game!, try to beat me!</string>
    <string name="savescore">Save Score</string>
    <string name="title_activity_guardar_puntos">GuardarPuntos</string>
    <string name="savename">Save</string>
    <string name="title_activity_score">Score</string>
    <string name="puntuaciones">Best Players</string>

</resources>