<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/cabeceraserver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="15dp"
            android:text="@string/Servidor"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#CC2EFA"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/ServerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/Multijugador"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#40FF00"
            android:textSize="36dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/Jugador1"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#40FF00" />

                <TextView
                    android:id="@+id/Nombre1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="23dp"
                    android:text="@string/Esperando"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#CC2EFA" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/Jugador2"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#40FF00" />

                <TextView
                    android:id="@+id/Nombre2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="23dp"
                    android:text="@string/Esperando"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#CC2EFA" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>
        </TableLayout>
        
        <Button
            android:id="@+id/Empezar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:minHeight="82dp"
            android:text="@string/Empezar"
            android:textSize="33dp" />

    </LinearLayout>
