<?xml version="1.0" encoding="UTF-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip"
            android:layout_marginLeft="85dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="50dp"
            android:textColor="#BF00FF" />

        <EditText
            android:id="@+id/ipserver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text|numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nombre"
            android:layout_marginLeft="130dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#BF00FF" />

        <EditText
            android:id="@+id/alias"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/comenzar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="50dp"
            android:text="@string/Empezar" />

        <ProgressBar
            android:id="@+id/conectando"
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dip"
            android:layout_marginTop="10dip"
            android:clickable="false"
            android:fitsSystemWindows="false"
            android:indeterminate="true"
            android:minHeight="100dip"
            android:minWidth="100dip"
            android:visibility="visible" />

        <TextView
            android:id="@+id/conectandoo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Esperando"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#40FF00" />

    </LinearLayout>
